Fixed Overflow, Limited Load Requests
Implemented a function that conditionally calls loadGradeableEditor iff the content of the file is not currently being displayed in the text area.

--- a/site/public/css/admin-gradeable.css
+++ b/site/public/css/admin-gradeable.css
@@ -406,7 +406,6 @@ body::-webkit-scrollbar-track {
 
 #gradeable-config-edit-bar {
     display: none;
-    overflow: hidden;
 }
 
 .warning-banner {
